# free-tier-ai-orchestrator

./: .env.example  .gitignore  LICENSE  PRO.md  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/: FUNDING.yml
orchestrator/: __init__.py  __main__.py  agent.py  agents.py  cli.py  client.py  config.py  godmode.py  godmode_catalog.py  login.py  orchestrator.py  pro.py  registry.py  repl.py  router.py  selftest.py  state.py  stats.py  tools.py  ui.py  web.py
